@@ -1,5 +1,14 @@
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
-	* Changelog: Fixed previous entry date.
+	* Changelog: Previous two entries (what was wrong with me?).
+	* configure.ac: Enabling NxBR scalers by default, as they seem stable enough.
+	* schedule.cc, actions.*: Eliminating warnings.
+	* files/Flex.h, files/IFF.h, files/Table.h: Cosmetic: explicitly adding in
+	  the virtual destructors, just in case.
+	* exult.cc, exultmenu.cc, gamemap.cc, files/U7fileman.h: Enhancing Valgrind's
+	  signal-to-noise ratio, eliminating some warnings.
+	* shapes/vgafile.*: Avoid unnecessary data copying by using references.
+
+2012-12-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* combat.cc: Fixed incorrect animation of slimes after they attacked.
 	* actors.*, combat.cc, monster.cc: De-hard-coded slime and sea-serpent
 	  shapes. Fixed incorrect sea serpent attack animation (with improvements
